added pedregosa's slides

--- a/mathphys-seminar.html
+++ b/mathphys-seminar.html
@@ -32,7 +32,7 @@
 			<li>
 				April 9, 2024,<br>
 				<b>Fabian Pedregosa</b> (Google),<br>
-				<u><i>Machine Unlearning: Definitions, Methods, and Auditing for Trustworthy AI.</i></u><br>
+				<a href="docs/mathphys-seminar/Pedregosa24.pdf" target="_blank" class="publication">Machine Unlearning: Definitions, Methods, and Auditing for Trustworthy AI</a>.<br>
 			</li>
 			<li>
 				March 25, 2024,<br>
