added arnaudon's talk

--- a/mathphys-seminar.html
+++ b/mathphys-seminar.html
@@ -30,6 +30,11 @@
 		
 		<ul>
 			<li>
+				April 22, 2024,<br>
+				<b>Alexis Arnaudon</b> (Blue Brain Project, EPFL),<br>
+				<a href="docs/mathphys-seminar/Arnaudon24.pdf" target="_blank" class="publication">Unraveling the shape of networks with diffusion across scales</a>.<br>
+			</li>
+			<li>
 				April 9, 2024,<br>
 				<b>Fabian Pedregosa</b> (Google),<br>
 				<a href="docs/mathphys-seminar/Pedregosa24.pdf" target="_blank" class="publication">Machine Unlearning: Definitions, Methods, and Auditing for Trustworthy AI</a>.<br>
@@ -76,7 +81,7 @@
 		<div class="footer">
 			<p class="footer">
 				<br><br>
-				Last updated on April 10th, 2024.
+				Last updated on April 22th, 2024.
 				<br><br><br>
 			</p>
 		</div>
