--- a/mathphys-seminar.html
+++ b/mathphys-seminar.html
@@ -30,6 +30,11 @@
 		
 		<ul>
 			<li>
+				September 11, 2024,<br>
+				<b>Laurent Pagnier</b> (University of Arizona, Tucson),<br>
+				<u><i>A brief intro to reinforcement learning</i></u><br>
+			</li>
+			<li>
 				April 22, 2024,<br>
 				<b>Alexis Arnaudon</b> (Blue Brain Project, EPFL),<br>
 				<a href="docs/mathphys-seminar/Arnaudon24.pdf" target="_blank" class="publication">Unraveling the shape of networks with diffusion across scales</a>.<br>
