pdf of pagnier's talk

--- a/mathphys-seminar.html
+++ b/mathphys-seminar.html
@@ -32,7 +32,7 @@
 			<li>
 				September 11, 2024,<br>
 				<b>Laurent Pagnier</b> (University of Arizona, Tucson),<br>
-				<u><i>A brief intro to reinforcement learning</i></u><br>
+				<a href="docs/mathphys-seminar/Pagnier24.pdf" target="_blank" class="publication">A brief intro to reinforcement learning</a>.<br>
 			</li>
 			<li>
 				April 22, 2024,<br>
