--- a/index.html
+++ b/index.html
@@ -176,6 +176,11 @@
 		
 		<ul>
 			<li>
+				L. Pagnier, <rd>R. Delabays</rd>, and M. Tyloo,
+				<a href="docs/articles/Pagnier24.pdf" target="_blank" class="publication">Nontrivial Kron reduction for power grid dynamics modeling</a>,
+				submitted (2024).
+				<br><ps>arXiv: <a href="https://arxiv.org/abs/2409.09519" target="_blank">2409.09519</a>
+			<li>
 				<rd>R. Delabays</rd>, G. De Pasquale, F. D&ouml;rfler, and Y. Zhang,
 				<a href="docs/articles/Delabays24a.pdf" target="_blank" class="publication">Hypergraph reconstruction from dynamics</a>,
 				submitted (2024).
@@ -588,7 +593,7 @@
 		<div class="footer">
 			<p class="footer">
 				<br><br>
-				Last updated on February 27th, 2024.
+				Last updated on September 17th, 2024.
 				<br><br><br>
 			</p>
 		</div>
