added editorial job

--- a/index.html
+++ b/index.html
@@ -100,7 +100,8 @@
 		<p class="text">
 			<b>Since 2022:</b><br>
 			Since August 2022, I am an Assistant Professor at the School of Engineering of the University of Applied Sciences of Western Switzerland (HES-SO), in Sion (CH). 
-			I am teach mathematics young engineers and pursuing my research on the interplay between network structures and dynamical systems, with special focus on power grids.
+			I teach mathematics young engineers and pursue my research on the interplay between network structures and dynamical systems, with special focus on power grids.
+			In 2024, I joined the editorial board of IOP's <a href="https://iopscience.iop.org/journal/2632-072X" target="_blank">Journal of Physics: Complexity</a>. 
 		</p>
 		
 		<p class="text">
@@ -593,7 +594,7 @@
 		<div class="footer">
 			<p class="footer">
 				<br><br>
-				Last updated on September 17th, 2024.
+				Last updated on October 7th, 2024.
 				<br><br><br>
 			</p>
 		</div>
