--- a/index.html
+++ b/index.html
@@ -177,6 +177,11 @@
 		
 		<ul>
 			<li>
+				N. Kastendiek, J. Niehues, <rd>R. Delabays</rd>, T. Gross, and F. Hellmann,
+				<a href="docs/articles/Kastendiek24.pdf" target=_blank" class="publication">Phase and gain stability for adatptive dynamical networks</a>,
+				submitted (2024).
+				<br><ps>arXiv: <a href="https://arxiv.org/abs/2411.10387" target="_blank">2411.10387</a>
+			<li>
 				L. Pagnier, <rd>R. Delabays</rd>, and M. Tyloo,
 				<a href="docs/articles/Pagnier24.pdf" target="_blank" class="publication">Nontrivial Kron reduction for power grid dynamics modeling</a>,
 				submitted (2024).
@@ -594,7 +599,7 @@
 		<div class="footer">
 			<p class="footer">
 				<br><br>
-				Last updated on October 7th, 2024.
+				Last updated on November 18th, 2024.
 				<br><br><br>
 			</p>
 		</div>
