--- a/index.html
+++ b/index.html
@@ -177,8 +177,13 @@
 		
 		<ul>
 			<li>
+				J. Niehues, <rd>R. Delabays</rd>, and F. Hellmann,
+				<a href="docs/articles/Niehues24.pdf" target="_blank" class="publication">Small-signal stability of power systems with voltage droop</a>,
+				under preparation (2024).
+				<br><ps>arXiv :<a href="https://arxiv.org/abs/2411.10832" target="_blank" class="publication">2411.10832</a>
+			<li>
 				N. Kastendiek, J. Niehues, <rd>R. Delabays</rd>, T. Gross, and F. Hellmann,
-				<a href="docs/articles/Kastendiek24.pdf" target=_blank" class="publication">Phase and gain stability for adatptive dynamical networks</a>,
+				<a href="docs/articles/Kastendiek24.pdf" target="_blank" class="publication">Phase and gain stability for adatptive dynamical networks</a>,
 				submitted (2024).
 				<br><ps>arXiv: <a href="https://arxiv.org/abs/2411.10387" target="_blank">2411.10387</a>
 			<li>
@@ -599,7 +604,7 @@
 		<div class="footer">
 			<p class="footer">
 				<br><br>
-				Last updated on November 18th, 2024.
+				Last updated on November 19th, 2024.
 				<br><br><br>
 			</p>
 		</div>
