--- a/mathphys-seminar.html
+++ b/mathphys-seminar.html
@@ -32,7 +32,7 @@
 			<li>
 				November 6, 2024,<br>
 				<b>Mateusz Wilinski</b> (Tampere University, Finland),<br>
-				<u><i>Dynamic message passing and its applications for spreading processes on networks.</i></u><br>
+				<a href="docs/mathphys-seminar/Wilinski24.pdf" target="_blank" class="publication">Dynamic message passing and its applications for spreading processes on networks</a>.<br>
 			</li>
 			<li>
 				September 11, 2024,<br>
@@ -91,7 +91,7 @@
 		<div class="footer">
 			<p class="footer">
 				<br><br>
-				Last updated on April 22th, 2024.
+				Last updated on November 19th, 2024.
 				<br><br><br>
 			</p>
 		</div>
