added berthod's and de pasquale's talks

--- a/mathphys-seminar.html
+++ b/mathphys-seminar.html
@@ -30,6 +30,16 @@
 		
 		<ul>
 			<li>
+				November 20, 2024,<br>
+				<b>Giulia De Pasquale</b> (ETH Zurich),<br>
+				<i><u>Mitigating Bias in Decicion-Making Systems: a Control Systems Perspective</u></i>.<br>
+			</li>
+			<li>
+				November 13, 2024,<br>
+				<b>Christophe Berthod</b> (University of Geneva),<br>
+				<i><u>Supraconductivit&eacute dans les compos&eacutes à base d'hydrog&egravene</u></i>.<br>
+			</li>
+			<li>
 				November 6, 2024,<br>
 				<b>Mateusz Wilinski</b> (Tampere University, Finland),<br>
 				<a href="docs/mathphys-seminar/Wilinski24.pdf" target="_blank" class="publication">Dynamic message passing and its applications for spreading processes on networks</a>.<br>
@@ -91,7 +101,7 @@
 		<div class="footer">
 			<p class="footer">
 				<br><br>
-				Last updated on November 19th, 2024.
+				Last updated on November 20th, 2024.
 				<br><br><br>
 			</p>
 		</div>
