add focus issue edito

--- a/index.html
+++ b/index.html
@@ -363,7 +363,18 @@
 
 
 		</ul>
-		
+
+<!-- ============================== Editorials ================================ -->
+		<h2>Editorials</h2>
+
+		<ul>
+			<li>
+				<rd> R. Delabays</rd>, L. Pagnier, B. Sch&auml;fer, M. Tyloo, and D. Witthaut,
+				<a href="docs/articles/Delabays24b.pdf" target="_blank" class="publication">Focus on monitoring and control of complex supply systems</a>,
+				Journal of Physics: Complexity <b>5</b>, 040201 (2024).
+				<br><ps>DOI: <a href="https://doi.org/10.1088/2632-072X/acfadd" target="_blank">10.1088/2632-072X/acfadd</a>
+		</ul>
+
 <!-- =============================== Softwares ================================= -->
 		<h2>Softwares</h2>
 		
@@ -604,7 +615,7 @@
 		<div class="footer">
 			<p class="footer">
 				<br><br>
-				Last updated on November 19th, 2024.
+				Last updated on December 9th, 2024.
 				<br><br><br>
 			</p>
 		</div>
