--- a/mathphys-seminar.html
+++ b/mathphys-seminar.html
@@ -30,6 +30,11 @@
 		
 		<ul>
 			<li>
+				December 4, 2024,<br>
+				<b>Roland Willa</b> (HES-SO Valais-Wallis),<br>
+				<i><u>De la physique à l'intelligence artificielle: Le Prix Nobel de Physique décrypté</u></i>.<br>
+			</li>
+			<li>
 				November 20, 2024,<br>
 				<b>Giulia De Pasquale</b> (ETH Zurich),<br>
 				<i><u>Mitigating Bias in Decicion-Making Systems: a Control Systems Perspective</u></i>.<br>
@@ -101,7 +106,7 @@
 		<div class="footer">
 			<p class="footer">
 				<br><br>
-				Last updated on November 20th, 2024.
+				Last updated on December 9th, 2024.
 				<br><br><br>
 			</p>
 		</div>
