added De Pasquale's slides an Raphael's talk

--- a/mathphys-seminar.html
+++ b/mathphys-seminar.html
@@ -30,6 +30,11 @@
 		
 		<ul>
 			<li>
+				December 11, 2024,<br>
+				<b>Elise Raphael</b> (University of Geneva),<br>
+				<i><u>Partager les maths: entre médiation, vulgarisation et mains dans le cambouis</u></i>.<br>
+			</li>
+			<li>
 				December 4, 2024,<br>
 				<b>Roland Willa</b> (HES-SO Valais-Wallis),<br>
 				<i><u>De la physique à l'intelligence artificielle: Le Prix Nobel de Physique décrypté</u></i>.<br>
@@ -37,7 +42,7 @@
 			<li>
 				November 20, 2024,<br>
 				<b>Giulia De Pasquale</b> (ETH Zurich),<br>
-				<i><u>Mitigating Bias in Decicion-Making Systems: a Control Systems Perspective</u></i>.<br>
+				<a href="docs/mathphys-seminar/DePasquale24.pdf" target="_blank" class="publication">Mitigating Bias in Decicion-Making Systems: a Control Systems Perspective</a>.<br>
 			</li>
 			<li>
 				November 13, 2024,<br>
