added raphael's slides

--- a/mathphys-seminar.html
+++ b/mathphys-seminar.html
@@ -32,7 +32,7 @@
 			<li>
 				December 11, 2024,<br>
 				<b>Elise Raphael</b> (University of Geneva),<br>
-				<i><u>Partager les maths: entre médiation, vulgarisation et mains dans le cambouis</u></i>.<br>
+				<a href="docs/mathphys-seminar/Raphael24.pdf" target_"_blank" class="publication">Partager les maths: entre médiation, vulgarisation et mains dans le cambouis</a>.<br>
 			</li>
 			<li>
 				December 4, 2024,<br>
@@ -111,7 +111,7 @@
 		<div class="footer">
 			<p class="footer">
 				<br><br>
-				Last updated on December 9th, 2024.
+				Last updated on December 13th, 2024.
 				<br><br><br>
 			</p>
 		</div>
