added nat commun

--- a/index.html
+++ b/index.html
@@ -191,17 +191,18 @@
 				<a href="docs/articles/Pagnier24.pdf" target="_blank" class="publication">Nontrivial Kron reduction for power grid dynamics modeling</a>,
 				submitted (2024).
 				<br><ps>arXiv: <a href="https://arxiv.org/abs/2409.09519" target="_blank">2409.09519</a>
-			<li>
-				<rd>R. Delabays</rd>, G. De Pasquale, F. D&ouml;rfler, and Y. Zhang,
-				<a href="docs/articles/Delabays24a.pdf" target="_blank" class="publication">Hypergraph reconstruction from dynamics</a>,
-				submitted (2024).
-				<br><ps>arXiv: <a href="https://arxiv.org/abs/2402.00078" target="_blank">2402.00078</a>
 		</ul>
 
 <!-- =============================== Peer-reviewed ========================= -->
 		<h2>Peer-reviewed</h2>
 
 		<ul>
+			<li>
+				<rd>R. Delabays</rd>, G. De Pasquale, F. D&ouml;rfler, and Y. Zhang,
+				<a href="docs/articles/Delabays25a.pdf" target="_blank" class="publication">Hypergraph reconstruction from dynamics</a>,
+				Nature Communications <b>16</b>, 2691 (2025).
+				<br><ps>DOI: <a href="https://doi.org/10.1038/s41467-025-57664-2" target="_blank">10.1038/s41467-025-57664-2</a>
+				- <ps>arXiv: <a href="https://arxiv.org/abs/2402.00078" target="_blank">2402.00078</a>
 			<li>
 				G. M. Givi, <rd>R. Delabays</rd>, M. Jacquemet, and P. Jacquod, 
 				<a href="docs/articles/Givi24.pdf" target="_blank" class="publication">On the robustness of democratic electoral processes to computational propaganda</a>,
@@ -617,7 +618,7 @@
 		<div class="footer">
 			<p class="footer">
 				<br><br>
-				Last updated on December 30th, 2024.
+				Last updated on March 19th, 2025.
 				<br><br><br>
 			</p>
 		</div>
