--- a/index.html
+++ b/index.html
@@ -177,10 +177,15 @@
 		
 		<ul>
 			<li>
+				<rd>R. Delabays</rd> and P. Jacquod,
+				<a href="docs/articles/Delabays25b.pdf" target="_blank" class="publication">Route to chaos and unified dynamical framework of multi-species ecosystems</a>,
+				submitted (2025).
+				<br><ps>arXiv: <a href="https://arxiv.org/abs/2503.16999" target="_blank" class="publication">2503.16999</a>
+			<li>
 				J. Niehues, <rd>R. Delabays</rd>, and F. Hellmann,
 				<a href="docs/articles/Niehues24.pdf" target="_blank" class="publication">Small-signal stability of power systems with voltage droop</a>,
-				under preparation (2024).
-				<br><ps>arXiv :<a href="https://arxiv.org/abs/2411.10832" target="_blank" class="publication">2411.10832</a>
+				submitted (2024).
+				<br><ps>arXiv: <a href="https://arxiv.org/abs/2411.10832" target="_blank" class="publication">2411.10832</a>
 			<li>
 				N. Kastendiek, J. Niehues, <rd>R. Delabays</rd>, T. Gross, and F. Hellmann,
 				<a href="docs/articles/Kastendiek24.pdf" target="_blank" class="publication">Phase and gain stability for adatptive dynamical networks</a>,
@@ -618,7 +623,7 @@
 		<div class="footer">
 			<p class="footer">
 				<br><br>
-				Last updated on March 19th, 2025.
+				Last updated on March 25th, 2025.
 				<br><br><br>
 			</p>
 		</div>
