added tyloo's talk and perspectives

--- a/index.html
+++ b/index.html
@@ -529,17 +529,34 @@
 				<a href="#top" class="btt">Back to top</a>
 
 		<hr>
+
+<!-- ======================= Perspectives ====================== -->
+		<a href="https://www.hevs.ch/fr/events/exposition-perspectives-210767" target="_blank">
+			<img src="images/perspectives-logo.png" alt="Perpectives" style="width:8vw; margin-right:15vw; max-width:300px; min-width:100px" align="right" hspace="20px" vspace="25px">
+		</a>
+
+		<h1 id="perspectives">Perspectives : L'univers mathématique de M.C. Escher</h1>
+
+		<p class="text">
+		From March 31 to May 23, the School of Engineering of the HES-SO Valais-Wallis hosted the exhibition <a href="https://www.hevs.ch/fr/events/exposition-perspectives-210767" target="_blank">"Perspectives"</a>, exploring the mathematical aspects of M.C. Escher artistic work. 
+		The exhibition was originially created by Dre. Elise Raphael and Dre Sandie Moody, and <a href="https://www.unige.ch/math/perspectives/" target="_blank">held at the University of Geneva</a> from February 19 to April 26, 2024.
 		
+		</p>
+
+		<a href="#top" class="btt">Back to top</a>
+
+		<hr>
+
 <!-- ======================= CRM =============================== -->
 		<a href="https://crm.sspmp.ch/" target="_blank">
-			<img src="images/crm.png" alt="CRM" style="width: 60vw; margin-right: 15vw; max-width: 300px; min-width=100px" align="right" hspace="20px" vspace="25px">
+			<img src="images/crm.png" alt="CRM" style="width:60vw; margin-right:15vw; max-width:300px; min-width:100px" align="right" hspace="20px" vspace="25px">
 		</a>
 
 		<h1 id="crm23">Colloque CRM 2023</h1>
 		
 		<p class="text">
 			In September 2023, I was invited to give a presentation at the annual <a href="https://crm.sspmp.ch/cours/" target="_blank">Colloquium of the CRM</a> (<i>Commission Romande de Mathématiques</i>) about the relation between mathematical models of power grids and graph theory. 
-			The slides (in French) and associated codes are available on <a href="https://github.com/r0b1nu5/bucket/tree/master/23e-crm">GitHub</a>.
+			The slides (in French) and associated codes are available on <a href="https://github.com/r0b1nu5/bucket/tree/master/23e-crm" target="_blank">GitHub</a>.
 
 		</p>
 
@@ -623,7 +640,7 @@
 		<div class="footer">
 			<p class="footer">
 				<br><br>
-				Last updated on March 25th, 2025.
+				Last updated on April 17th, 2025.
 				<br><br><br>
 			</p>
 		</div>
