--- a/mathphys-seminar.html
+++ b/mathphys-seminar.html
@@ -30,9 +30,19 @@
 		
 		<ul>
 			<li>
+				April 16, 2026,<br>
+				<b>Melvyn Tyloo</b> (University of Exeter),<br>
+				<a href="docs/mathphys-seminar/Tyloo25.pdf" target="_blank" class="publication">Inference and control of neurons</a>.<br>
+			</li>
+			<li>
+				January 15, 2025,<br>
+				<b>Tobias Hurth</b> (University of Neuchatel),<br>
+				<i><u>Échanges aléatoires entre champs de vecteurs déterministes</u></i>.<br>
+			</li>
+			<li>
 				December 11, 2024,<br>
 				<b>Elise Raphael</b> (University of Geneva),<br>
-				<a href="docs/mathphys-seminar/Raphael24.pdf" target_"_blank" class="publication">Partager les maths: entre médiation, vulgarisation et mains dans le cambouis</a>.<br>
+				<a href="docs/mathphys-seminar/Raphael24.pdf" target="_blank" class="publication">Partager les maths: entre médiation, vulgarisation et mains dans le cambouis</a>.<br>
 			</li>
 			<li>
 				December 4, 2024,<br>
@@ -111,7 +121,7 @@
 		<div class="footer">
 			<p class="footer">
 				<br><br>
-				Last updated on December 13th, 2024.
+				Last updated on April 17th, 2025.
 				<br><br><br>
 			</p>
 		</div>
