--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
 		<br>
 		<br>
 <!-- ======================= Sections ========================== -->
-<p><a href="#myresearch">My research</a> - <a href="#publications">Publications</a> - <a href="#pespectives">Perspectives</a> - <a href="#crm23">CRM 2023</a> - <a href="#jphyscomplexity">JPhys Complexity</a> - <a href="#ccs21">CCS 2021</a> - <a href="#geocow20">GeoCoW 2020</a> - <a href="mathphys-seminar.html">MathPhys Seminar<a></p>
+<p><a href="#myresearch">My research</a> - <a href="#publications">Publications</a> - <a href="#perspectives">Perspectives</a> - <a href="#crm23">CRM 2023</a> - <a href="#jphyscomplexity">JPhys Complexity</a> - <a href="#ccs21">CCS 2021</a> - <a href="#geocow20">GeoCoW 2020</a> - <a href="mathphys-seminar.html">MathPhys Seminar<a></p>
 
 
 		<hr>
