--- a/index.html
+++ b/index.html
@@ -187,11 +187,6 @@
 				submitted (2024).
 				<br><ps>arXiv: <a href="https://arxiv.org/abs/2411.10832" target="_blank" class="publication">2411.10832</a>
 			<li>
-				N. Kastendiek, J. Niehues, <rd>R. Delabays</rd>, T. Gross, and F. Hellmann,
-				<a href="docs/articles/Kastendiek24.pdf" target="_blank" class="publication">Phase and gain stability for adatptive dynamical networks</a>,
-				submitted (2024).
-				<br><ps>arXiv: <a href="https://arxiv.org/abs/2411.10387" target="_blank">2411.10387</a>
-			<li>
 				L. Pagnier, <rd>R. Delabays</rd>, and M. Tyloo,
 				<a href="docs/articles/Pagnier24.pdf" target="_blank" class="publication">Nontrivial Kron reduction for power grid dynamics modeling</a>,
 				submitted (2024).
@@ -202,6 +197,12 @@
 		<h2>Peer-reviewed</h2>
 
 		<ul>
+			<li>
+				N. Kastendiek, J. Niehues, <rd>R. Delabays</rd>, T. Gross, and F. Hellmann,
+				<a href="docs/articles/Kastendiek24.pdf" target="_blank" class="publication">Phase and gain stability for adatptive dynamical networks</a>,
+				Chaos <b>35</b>, 053142 (2025).
+				<br><ps>DOI: <a href="https://doi.org/10.1063/5.0249706" target="_blank">10.1063/5.0249706</a>
+				- <ps>arXiv: <a href="https://arxiv.org/abs/2411.10387" target="_blank">2411.10387</a>
 			<li>
 				<rd>R. Delabays</rd>, G. De Pasquale, F. D&ouml;rfler, and Y. Zhang,
 				<a href="docs/articles/Delabays25a.pdf" target="_blank" class="publication">Hypergraph reconstruction from dynamics</a>,
@@ -640,7 +641,7 @@
 		<div class="footer">
 			<p class="footer">
 				<br><br>
-				Last updated on April 17th, 2025.
+				Last updated on May 13th, 2025.
 				<br><br><br>
 			</p>
 		</div>
