--- a/index.html
+++ b/index.html
@@ -540,7 +540,7 @@
 
 		<p class="text">
 		From March 31 to May 23, the School of Engineering of the HES-SO Valais-Wallis hosted the exhibition <a href="https://www.hevs.ch/fr/events/exposition-perspectives-210767" target="_blank">"Perspectives"</a>, exploring the mathematical aspects of M.C. Escher artistic work. 
-		The exhibition was originially created by Dre. Elise Raphael and Dre Sandie Moody, and <a href="https://www.unige.ch/math/perspectives/" target="_blank">held at the University of Geneva</a> from February 19 to April 26, 2024.
+		The exhibition was originially created by Dre. Elise Raphael and Dre. Sandie Moody, and <a href="https://www.unige.ch/math/perspectives/" target="_blank">initially held at the University of Geneva</a> from February 19 to April 26, 2024.
 		
 		</p>
 
@@ -641,7 +641,7 @@
 		<div class="footer">
 			<p class="footer">
 				<br><br>
-				Last updated on May 15th, 2025.
+				Last updated on May 22th, 2025.
 				<br><br><br>
 			</p>
 		</div>
