added Zhang's talk

--- a/mathphys-seminar.html
+++ b/mathphys-seminar.html
@@ -30,7 +30,12 @@
 		
 		<ul>
 			<li>
-				April 16, 2026,<br>
+				June 18, 2025,<br>
+				<b>Yuanzhao Zhan</b> (Santa Fe Institute),<br>
+				<a href="docs/mathphys-seminar/Zhang25.pdf" target="_blank" class="publication">Model-free inference and zero-shot forecast in complex systems</a>.<br>
+			</li>
+			<li>
+				April 16, 2025,<br>
 				<b>Melvyn Tyloo</b> (University of Exeter),<br>
 				<a href="docs/mathphys-seminar/Tyloo25.pdf" target="_blank" class="publication">Inference and control of neurons</a>.<br>
 			</li>
@@ -121,7 +126,7 @@
 		<div class="footer">
 			<p class="footer">
 				<br><br>
-				Last updated on April 17th, 2025.
+				Last updated on June 24th, 2025.
 				<br><br><br>
 			</p>
 		</div>
