--- a/index.html
+++ b/index.html
@@ -186,17 +186,17 @@
 				<a href="docs/articles/Niehues24.pdf" target="_blank" class="publication">Small-signal stability of power systems with voltage droop</a>,
 				submitted (2024).
 				<br><ps>arXiv: <a href="https://arxiv.org/abs/2411.10832" target="_blank" class="publication">2411.10832</a>
-			<li>
-				L. Pagnier, <rd>R. Delabays</rd>, and M. Tyloo,
-				<a href="docs/articles/Pagnier24.pdf" target="_blank" class="publication">Nontrivial Kron reduction for power grid dynamics modeling</a>,
-				submitted (2024).
-				<br><ps>arXiv: <a href="https://arxiv.org/abs/2409.09519" target="_blank">2409.09519</a>
 		</ul>
 
 <!-- =============================== Peer-reviewed ========================= -->
 		<h2>Peer-reviewed</h2>
 
 		<ul>
+			<li>
+				L. Pagnier, <rd>R. Delabays</rd>, and M. Tyloo,
+				<a href="docs/articles/Pagnier24.pdf" target="_blank" class="publication">Nontrivial Kron reduction for power grid dynamics modeling</a>,
+				Proceeding of the IEEE Powertech conference (2025).
+				<br><ps>arXiv: <a href="https://arxiv.org/abs/2409.09519" target="_blank">2409.09519</a>
 			<li>
 				N. Kastendiek, J. Niehues, <rd>R. Delabays</rd>, T. Gross, and F. Hellmann,
 				<a href="docs/articles/Kastendiek24.pdf" target="_blank" class="publication">Phase and gain stability for adatptive dynamical networks</a>,
@@ -641,7 +641,7 @@
 		<div class="footer">
 			<p class="footer">
 				<br><br>
-				Last updated on May 22th, 2025.
+				Last updated on July 2nd, 2025.
 				<br><br><br>
 			</p>
 		</div>
