--- a/index.html
+++ b/index.html
@@ -182,7 +182,7 @@
 				submitted (2025).
 				<br><ps>arXiv: <a href="https://arxiv.org/abs/2503.16999" target="_blank" class="publication">2503.16999</a>
 			<li>
-				J. Niehues, <rd>R. Delabays</rd>, and F. Hellmann,
+				J. Niehues, <rd>R. Delabays</rd>, A. B&uuml;ttner, and F. Hellmann,
 				<a href="docs/articles/Niehues24.pdf" target="_blank" class="publication">Small-signal stability of power systems with voltage droop</a>,
 				submitted (2024).
 				<br><ps>arXiv: <a href="https://arxiv.org/abs/2411.10832" target="_blank" class="publication">2411.10832</a>
@@ -641,7 +641,7 @@
 		<div class="footer">
 			<p class="footer">
 				<br><br>
-				Last updated on July 2nd, 2025.
+				Last updated on July 29th, 2025.
 				<br><br><br>
 			</p>
 		</div>
