--- a/mathphys-seminar.html
+++ b/mathphys-seminar.html
@@ -31,7 +31,7 @@
 		<ul>
 			<li>
 				June 18, 2025,<br>
-				<b>Yuanzhao Zhan</b> (Santa Fe Institute),<br>
+				<b>Yuanzhao Zhang</b> (Santa Fe Institute),<br>
 				<a href="docs/mathphys-seminar/Zhang25.pdf" target="_blank" class="publication">Model-free inference and zero-shot forecast in complex systems</a>.<br>
 			</li>
 			<li>
