--- a/index.html
+++ b/index.html
@@ -177,11 +177,6 @@
 		
 		<ul>
 			<li>
-				<rd>R. Delabays</rd> and P. Jacquod,
-				<a href="docs/articles/Delabays25b.pdf" target="_blank" class="publication">Route to chaos and unified dynamical framework of multi-species ecosystems</a>,
-				submitted (2025).
-				<br><ps>arXiv: <a href="https://arxiv.org/abs/2503.16999" target="_blank" class="publication">2503.16999</a>
-			<li>
 				J. Niehues, <rd>R. Delabays</rd>, A. B&uuml;ttner, and F. Hellmann,
 				<a href="docs/articles/Niehues24.pdf" target="_blank" class="publication">Small-signal stability of power systems with voltage droop</a>,
 				submitted (2024).
@@ -192,6 +187,12 @@
 		<h2>Peer-reviewed</h2>
 
 		<ul>
+			<li>
+				<rd>R. Delabays</rd> and P. Jacquod,
+				<a href="docs/articles/Delabays25b.pdf" target="_blank" class="publication">Route to chaos in multi-species ecosystems</a>, 
+				Chaos <b>35</b>, 091109 (2025).
+				<br><ps>DOI: <a href="https://doi.org/10.1063/5.0291485" target="_blank">10.1063/5.0291485</a>
+				- <ps>arXiv: <a href="https://arxiv.org/abs/2503.16999" target="_blank" class="publication">2503.16999</a>
 			<li>
 				L. Pagnier, <rd>R. Delabays</rd>, and M. Tyloo,
 				<a href="docs/articles/Pagnier24.pdf" target="_blank" class="publication">Nontrivial Kron reduction for power grid dynamics modeling</a>,
@@ -641,7 +642,7 @@
 		<div class="footer">
 			<p class="footer">
 				<br><br>
-				Last updated on July 29th, 2025.
+				Last updated on September 8th, 2025.
 				<br><br><br>
 			</p>
 		</div>
