add niehues25, update cv

--- a/index.html
+++ b/index.html
@@ -175,6 +175,7 @@
 <!-- ======================= Preprints ================================ -->	
 		<h2>Preprints</h2>
 		
+<!--		
 		<ul>
 			<li>
 				J. Niehues, <rd>R. Delabays</rd>, A. B&uuml;ttner, and F. Hellmann,
@@ -182,11 +183,17 @@
 				submitted (2024).
 				<br><ps>arXiv: <a href="https://arxiv.org/abs/2411.10832" target="_blank" class="publication">2411.10832</a>
 		</ul>
-
+-->
 <!-- =============================== Peer-reviewed ========================= -->
 		<h2>Peer-reviewed</h2>
 
 		<ul>
+			<li></li>
+				J. Niehues, <rd>R. Delabays</rd>, A. B&uuml;ttner, and F. Hellmann,
+				<a href="docs/articles/Niehues25.pdf" target="_blank" class="publication">Small-signal stability of power systems with voltage droop</a>,
+				IEEE Transactions on Power Systems <i>Early Access</i> (2025).
+				<br><ps>DOI: <a href="https://doi.org/10.1109/TPWRS.2025.3613855" target="_blank" class="publication">10.1109/TPWRS.2025.3613855</a>
+				- <ps>arXiv: <a href="https://arxiv.org/abs/2411.10832" target="_blank" class="publication">2411.10832</a>
 			<li>
 				<rd>R. Delabays</rd> and P. Jacquod,
 				<a href="docs/articles/Delabays25b.pdf" target="_blank" class="publication">Route to chaos in multi-species ecosystems</a>, 
@@ -642,7 +649,7 @@
 		<div class="footer">
 			<p class="footer">
 				<br><br>
-				Last updated on September 8th, 2025.
+				Last updated on September 25th, 2025.
 				<br><br><br>
 			</p>
 		</div>
