--- a/index.html
+++ b/index.html
@@ -172,10 +172,9 @@
 			<a href="https://arxiv.org/search/?searchtype=author&query=Delabays,+R" target="_blank">arXiv</a>.
 		</p>
 		
-<!-- ======================= Preprints ================================ -->	
+<!-- ======================= Preprints ================================ 
 		<h2>Preprints</h2>
 		
-<!--		
 		<ul>
 			<li>
 				J. Niehues, <rd>R. Delabays</rd>, A. B&uuml;ttner, and F. Hellmann,
