--- a/index.html
+++ b/index.html
@@ -201,9 +201,10 @@
 				- <ps>arXiv: <a href="https://arxiv.org/abs/2503.16999" target="_blank" class="publication">2503.16999</a>
 			<li>
 				L. Pagnier, <rd>R. Delabays</rd>, and M. Tyloo,
-				<a href="docs/articles/Pagnier24.pdf" target="_blank" class="publication">Nontrivial Kron reduction for power grid dynamics modeling</a>,
+				<a href="docs/articles/Pagnier25.pdf" target="_blank" class="publication">Nontrivial Kron reduction for power grid dynamics modeling</a>,
 				Proceeding of the IEEE Powertech conference (2025).
-				<br><ps>arXiv: <a href="https://arxiv.org/abs/2409.09519" target="_blank">2409.09519</a>
+				<br><ps>DOI: <a href="https://doi.org/10.1109/PowerTech59965.2025.11180705" target="_blank" class="publication">10.1109/PowerTech59965.2025.11180705</a>
+				- <ps>arXiv: <a href="https://arxiv.org/abs/2409.09519" target="_blank">2409.09519</a>
 			<li>
 				N. Kastendiek, J. Niehues, <rd>R. Delabays</rd>, T. Gross, and F. Hellmann,
 				<a href="docs/articles/Kastendiek24.pdf" target="_blank" class="publication">Phase and gain stability for adatptive dynamical networks</a>,
@@ -648,7 +649,7 @@
 		<div class="footer">
 			<p class="footer">
 				<br><br>
-				Last updated on September 25th, 2025.
+				Last updated on October 11th, 2025.
 				<br><br><br>
 			</p>
 		</div>
