--- a/mathphys-seminar.html
+++ b/mathphys-seminar.html
@@ -28,7 +28,14 @@
 <!-- ================================= Presentations =========================== -->
 		<h1>MathPhys Seminar</h1>
 		
+		<h2>2025</h2>
+
 		<ul>
+			<li>
+				September 23, 2025,<br>
+				<b>Yiwei Jia</b> (HES-SO Valais-Wallis),<br>
+				<u>2.0 MR-Eye: A High-Resolution Motion-Resolved MRI Protocol for Anatomical Imaging of the Human Eye</u>.<br>
+			</li>
 			<li>
 				June 18, 2025,<br>
 				<b>Yuanzhao Zhang</b> (Santa Fe Institute),<br>
@@ -44,6 +51,10 @@
 				<b>Tobias Hurth</b> (University of Neuchatel),<br>
 				<i><u>Échanges aléatoires entre champs de vecteurs déterministes</u></i>.<br>
 			</li>
+		</ul>
+
+		<h2>2024</h2>
+		<ul>
 			<li>
 				December 11, 2024,<br>
 				<b>Elise Raphael</b> (University of Geneva),<br>
@@ -89,6 +100,10 @@
 				<b>Sebastien Ott</b> (EPFL, Lausanne),<br>
 				<u><i>Interfaces in 2d low temperature lattice spin models.</i></u><br>
 			</li>
+		</ul>
+
+		<h2>2023</h2>
+		<ul>
 			<li>
 				November 23, 2023,<br>
 				<b>Giovanni Petri</b> (Northeaster University, London),<br>
@@ -126,7 +141,7 @@
 		<div class="footer">
 			<p class="footer">
 				<br><br>
-				Last updated on June 24th, 2025.
+				Last updated on October 14th, 2025.
 				<br><br><br>
 			</p>
 		</div>
