--- a/mathphys-seminar.html
+++ b/mathphys-seminar.html
@@ -34,7 +34,7 @@
 			<li>
 				September 23, 2025,<br>
 				<b>Yiwei Jia</b> (HES-SO Valais-Wallis),<br>
-				<u>2.0 MR-Eye: A High-Resolution Motion-Resolved MRI Protocol for Anatomical Imaging of the Human Eye</u>.<br>
+				<a href="docs/mathphys-seminar/Jia25.pdf" target="_blank" class="publication">>2.0 MR-Eye: A High-Resolution Motion-Resolved MRI Protocol for Anatomical Imaging of the Human Eye</a>.<br>
 			</li>
 			<li>
 				June 18, 2025,<br>
@@ -141,7 +141,7 @@
 		<div class="footer">
 			<p class="footer">
 				<br><br>
-				Last updated on October 14th, 2025.
+				Last updated on October 15th, 2025.
 				<br><br><br>
 			</p>
 		</div>
