--- a/mathphys-seminar.html
+++ b/mathphys-seminar.html
@@ -34,7 +34,7 @@
 			<li>
 				September 23, 2025,<br>
 				<b>Yiwei Jia</b> (HES-SO Valais-Wallis),<br>
-				<a href="docs/mathphys-seminar/Jia25.pdf" target="_blank" class="publication">>2.0 MR-Eye: A High-Resolution Motion-Resolved MRI Protocol for Anatomical Imaging of the Human Eye</a>.<br>
+				<a href="docs/mathphys-seminar/Jia25.pdf" target="_blank" class="publication">2.0 MR-Eye: A High-Resolution Motion-Resolved MRI Protocol for Anatomical Imaging of the Human Eye</a>.<br>
 			</li>
 			<li>
 				June 18, 2025,<br>
