--- a/mathphys-seminar.html
+++ b/mathphys-seminar.html
@@ -32,6 +32,11 @@
 
 		<ul>
 			<li>
+				October 22, 2025,<br>
+				<b>Roland Willa</b> (HES-SO Valais-Wallis),<br>
+				<a href="docs/mathphys-seminar/Willa25.pdf" target="_blank" class="publication">Quand la physique quantique devient macroscopique - Le Prix Nobel de physique 2025</a>
+			</li>
+			<li>
 				September 23, 2025,<br>
 				<b>Yiwei Jia</b> (HES-SO Valais-Wallis),<br>
 				<a href="docs/mathphys-seminar/Jia25.pdf" target="_blank" class="publication">2.0 MR-Eye: A High-Resolution Motion-Resolved MRI Protocol for Anatomical Imaging of the Human Eye</a>.<br>
