--- a/index.html
+++ b/index.html
@@ -20,30 +20,28 @@
 			<span style="float:right;">robin.delabays@hevs.ch</span>
 			<br>
 			<i>HES-SO Valais-Wallis, Sion, Switzerland</i>
-			<br>
+			<br>	
+			<span style="float:right;">
+<!-- =========================== Social media links ===================== -->
+				<a href="https://www.researchgate.net/profile/Robin_Delabays" target="_blank">
+					<img src="images/researchgate.png" alt="ResearchGate" style="width:40px;" class="socialmedia">
+				</a>
+				<a href="https://orcid.org/0000-0001-6344-1207" target="_blank">
+					<img src="images/orcid.png" alt="ORCID" style="width:40px;margin-right:10px;" class="socialmedia">
+				</a>
+				<a href="https://scholar.google.com/citations?hl=en&user=Fi4dLRYAAAAJ" target="_blank">
+					<img src="images/scholar.png" alt="Google Scholar" style="width:40px;margin-right:10px;" class="socialmedia">
+				</a>
+			</span>	
 			<br>
 			</p>
 		</div>
 		
-<!-- =========================== Social media links ===================== -->
-		<a href="http://www.webofscience.com/wos/author/record/A-5901-2019" target="_blank">
-			<img src="images/wos.png" alt="WebOfScience" style="width:40px; margin-right:15vw;" class="socialmedia">
-		</a>
-		<a href="https://www.researchgate.net/profile/Robin_Delabays" target="_blank">
-			<img src="images/researchgate.png" alt="ResearchGate" style="width:40px;margin-right:10px;" class="socialmedia">
-		</a>
-		<a href="https://orcid.org/0000-0001-6344-1207" target="_blank">
-			<img src="images/orcid.png" alt="ORCID" style="width:40px;margin-right:10px;" class="socialmedia">
-		</a>
-		<a href="https://scholar.google.com/citations?hl=en&user=Fi4dLRYAAAAJ" target="_blank">
-			<img src="images/scholar.png" alt="Google Scholar" style="width:40px;margin-right:10px;" class="socialmedia">
-		</a>
-		
-		<br>
-		<br>
 <!-- ======================= Sections ========================== -->
-<p><a href="#myresearch">My research</a> - <a href="#publications">Publications</a> - <a href="#perspectives">Perspectives</a> - <a href="#crm23">CRM 2023</a> - <a href="#jphyscomplexity">JPhys Complexity</a> - <a href="#ccs21">CCS 2021</a> - <a href="#geocow20">GeoCoW 2020</a> - <a href="mathphys-seminar.html">MathPhys Seminar<a></p>
+<p>
+<b>Sections:</b> <a href="#myresearch">My research</a> - <a href="#publications">Publications</a> - <a href="mathphys-seminar.html">MathPhys Seminar</a><br>
 
+<b>Events:</b> <a href="#birs">BIRS</a> - <a href="#perspectives">Perspectives</a> - <a href="#crm23">CRM 2023</a> - <a href="#jphyscomplexity">JPhys Complexity</a> - <a href="#ccs21">CCS 2021</a> - <a href="#geocow20">GeoCoW 2020</a></p>
 
 		<hr>
 
@@ -212,7 +210,7 @@
 				<br><ps>DOI: <a href="https://doi.org/10.1063/5.0249706" target="_blank">10.1063/5.0249706</a>
 				- <ps>arXiv: <a href="https://arxiv.org/abs/2411.10387" target="_blank">2411.10387</a>
 			<li>
-				<rd>R. Delabays</rd>, G. De Pasquale, F. D&ouml;rfler, and Y. Zhang,
+			<rd>R. Delabays</rd>, G. De Pasquale, F. D&ouml;rfler, and Y. Zhang,
 				<a href="docs/articles/Delabays25a.pdf" target="_blank" class="publication">Hypergraph reconstruction from dynamics</a>,
 				Nature Communications <b>16</b>, 2691 (2025).
 				<br><ps>DOI: <a href="https://doi.org/10.1038/s41467-025-57664-2" target="_blank">10.1038/s41467-025-57664-2</a>
@@ -539,6 +537,25 @@
 
 		<hr>
 
+<!-- ======================= BIRS ============================== -->
+		<a href="https://www.birs.ca/" target="_blank">
+			<img src="images/birs.png" alt="BIRS" style="width:8vw; margin-right:15vw; max-width:300px; min-width:100py" align="right" hspace="20px" vspace="25px">
+		</a>
+
+		<h1 id="birs">Bridging the inter-disciplinary gap in the mathematical modeling of social phenomena</h1>
+
+		<p class="text">
+		In November 2025, I had the privilege to co-organize the workshop <a href="https://www.birs.ca/events/2025/5-day-workshops/25w5341" target="_blank">Bridging the inter-disciplinary gap in the mathematical modeling of social phenomena</a> in the breathtaking Banff International Research Station. 
+		During a week, we worked at bringing together the perspectives of the mathematical and social sciences. 
+
+		Co-organizers: <a href="https://gablab.mit.edu/team/chen-yibei/" target="_blank">Yibei Chen</a>, <a href="https://www.tue.nl/en/research/researchers/giulia-de-pasquale" target="_blank">Giulia De Pasquale</a>, and <a href="https://dorfler.ethz.ch/" target="_blank">Florian D&oumlrfler</a>.
+
+		</p>
+
+		<a href="#top" class="btt">Back to top</a>
+
+		<hr>
+
 <!-- ======================= Perspectives ====================== -->
 		<a href="https://www.hevs.ch/fr/events/exposition-perspectives-210767" target="_blank">
 			<img src="images/perspectives-logo.png" alt="Perpectives" style="width:8vw; margin-right:15vw; max-width:300px; min-width:100px" align="right" hspace="20px" vspace="25px">
@@ -649,7 +666,7 @@
 		<div class="footer">
 			<p class="footer">
 				<br><br>
-				Last updated on October 11th, 2025.
+				Last updated on November 7th, 2025.
 				<br><br><br>
 			</p>
 		</div>
