--- a/index.html
+++ b/index.html
@@ -189,19 +189,19 @@
 				J. Niehues, <rd>R. Delabays</rd>, A. B&uuml;ttner, and F. Hellmann,
 				<a href="docs/articles/Niehues25.pdf" target="_blank" class="publication">Small-signal stability of power systems with voltage droop</a>,
 				IEEE Transactions on Power Systems <i>Early Access</i> (2025).
-				<br><ps>DOI: <a href="https://doi.org/10.1109/TPWRS.2025.3613855" target="_blank" class="publication">10.1109/TPWRS.2025.3613855</a>
+				<br><ps>DOI: <a href="https://doi.org/10.1109/TPWRS.2025.3613855" target="_blank">10.1109/TPWRS.2025.3613855</a>
 				- <ps>arXiv: <a href="https://arxiv.org/abs/2411.10832" target="_blank" class="publication">2411.10832</a>
 			<li>
 				<rd>R. Delabays</rd> and P. Jacquod,
 				<a href="docs/articles/Delabays25b.pdf" target="_blank" class="publication">Route to chaos in multi-species ecosystems</a>, 
 				Chaos <b>35</b>, 091109 (2025).
 				<br><ps>DOI: <a href="https://doi.org/10.1063/5.0291485" target="_blank">10.1063/5.0291485</a>
-				- <ps>arXiv: <a href="https://arxiv.org/abs/2503.16999" target="_blank" class="publication">2503.16999</a>
+				- <ps>arXiv: <a href="https://arxiv.org/abs/2503.16999" target="_blank">2503.16999</a>
 			<li>
 				L. Pagnier, <rd>R. Delabays</rd>, and M. Tyloo,
 				<a href="docs/articles/Pagnier25.pdf" target="_blank" class="publication">Nontrivial Kron reduction for power grid dynamics modeling</a>,
 				Proceeding of the IEEE Powertech conference (2025).
-				<br><ps>DOI: <a href="https://doi.org/10.1109/PowerTech59965.2025.11180705" target="_blank" class="publication">10.1109/PowerTech59965.2025.11180705</a>
+				<br><ps>DOI: <a href="https://doi.org/10.1109/PowerTech59965.2025.11180705" target="_blank">10.1109/PowerTech59965.2025.11180705</a>
 				- <ps>arXiv: <a href="https://arxiv.org/abs/2409.09519" target="_blank">2409.09519</a>
 			<li>
 				N. Kastendiek, J. Niehues, <rd>R. Delabays</rd>, T. Gross, and F. Hellmann,
