--- a/mathphys-seminar.html
+++ b/mathphys-seminar.html
@@ -32,6 +32,16 @@
 
 		<ul>
 			<li>
+				November 13, 2025,<br>
+				<b>Valentina Broghesani</b> (University of Geneva),<br>
+				<i><u>Testing Cognitive Theories with Neuroimaging: Lessons from Primary Progressive Aphasia</u></i>.<br>
+			</li>
+			<li>
+				November 4, 2025,<br>
+				<b>J&eacute;r&ouml;me Kasparian</b> (University of Geneva),<br>
+				<i><u>Future Viability of European Vineyards using Bioclimatic Climate Analogues</u></i>
+			</li>
+			<li>
 				October 22, 2025,<br>
 				<b>Roland Willa</b> (HES-SO Valais-Wallis),<br>
 				<a href="docs/mathphys-seminar/Willa25.pdf" target="_blank" class="publication">Quand la physique quantique devient macroscopique - Le Prix Nobel de physique 2025</a>
@@ -146,7 +156,7 @@
 		<div class="footer">
 			<p class="footer">
 				<br><br>
-				Last updated on October 15th, 2025.
+				Last updated on November 14th, 2025.
 				<br><br><br>
 			</p>
 		</div>
