--- a/index.html
+++ b/index.html
@@ -170,17 +170,17 @@
 			<a href="https://arxiv.org/search/?searchtype=author&query=Delabays,+R" target="_blank">arXiv</a>.
 		</p>
 		
-<!-- ======================= Preprints ================================ 
+<!-- ======================= Preprints ================================ --> 
 		<h2>Preprints</h2>
 		
 		<ul>
 			<li>
-				J. Niehues, <rd>R. Delabays</rd>, A. B&uuml;ttner, and F. Hellmann,
-				<a href="docs/articles/Niehues24.pdf" target="_blank" class="publication">Small-signal stability of power systems with voltage droop</a>,
-				submitted (2024).
-				<br><ps>arXiv: <a href="https://arxiv.org/abs/2411.10832" target="_blank" class="publication">2411.10832</a>
+				<rd>R. Delabays</rd>, Y. Zhand, F. D&ouml;rfler, and G. De Pasquale,
+				<a href="docs/articles/Delabays25c.pdf" target="_blank" class="publication">Data-driven Control of Hypergraphs: Leveraging THIS to Damp Noise in Diffusive Hypergraphs</a>,
+				submitted (2025).
+				<br><ps>arXiv: <a href="https://arxiv.org/abs/2511.08647" target="_blank" class="publication">2511.08647</a>
 		</ul>
--->
+
 <!-- =============================== Peer-reviewed ========================= -->
 		<h2>Peer-reviewed</h2>
 
