--- a/mathphys-seminar.html
+++ b/mathphys-seminar.html
@@ -34,7 +34,7 @@
 			<li>
 				November 13, 2025,<br>
 				<b>Valentina Broghesani</b> (University of Geneva),<br>
-				<i><u>Testing Cognitive Theories with Neuroimaging: Lessons from Primary Progressive Aphasia</u></i>.<br>
+				<a href="docs/mathphys-seminar/Borghesani25.pdf" target="_blank" class="publication">Testing Cognitive Theories with Neuroimaging: Lessons from Primary Progressive Aphasia</a>.<br>
 			</li>
 			<li>
 				November 4, 2025,<br>
@@ -156,7 +156,7 @@
 		<div class="footer">
 			<p class="footer">
 				<br><br>
-				Last updated on November 14th, 2025.
+				Last updated on November 17th, 2025.
 				<br><br><br>
 			</p>
 		</div>
