--- a/mathphys-seminar.html
+++ b/mathphys-seminar.html
@@ -32,6 +32,11 @@
 
 		<ul>
 			<li>
+				November 18, 2025,<br>
+				<b>Joakim Tutt</b> (University of Geneva),<br>
+				<i><u>A Mathematical Model for the Description of the Security Framework of Copy Detection Pattern</u></i>
+			</li>
+			<li>
 				November 13, 2025,<br>
 				<b>Valentina Broghesani</b> (University of Geneva),<br>
 				<a href="docs/mathphys-seminar/Borghesani25.pdf" target="_blank" class="publication">Testing Cognitive Theories with Neuroimaging: Lessons from Primary Progressive Aphasia</a>.<br>
@@ -156,7 +161,7 @@
 		<div class="footer">
 			<p class="footer">
 				<br><br>
-				Last updated on November 17th, 2025.
+				Last updated on November 19th, 2025.
 				<br><br><br>
 			</p>
 		</div>
