--- a/index.html
+++ b/index.html
@@ -175,7 +175,12 @@
 		
 		<ul>
 			<li>
-				<rd>R. Delabays</rd>, Y. Zhand, F. D&ouml;rfler, and G. De Pasquale,
+				A. Casu, C. Quaresmini, <rd>R. Delabays</rd>, L. Mitchell, and P. E. Par&eacute;,
+				<a href="docs/articles/Casu25.pdf" target="_blank" class="publication">Demographic Dependence of Vaccine Adoption under Opinion Persuasion</a>,
+				submitted (2025).
+				<br><ps>arXiv: <a href="https://arxiv.org/abs/2512.06385" target="_blank" class="publication">2512.06385</a>
+			<li>
+				<rd>R. Delabays</rd>, Y. Zhang, F. D&ouml;rfler, and G. De Pasquale,
 				<a href="docs/articles/Delabays25c.pdf" target="_blank" class="publication">Data-driven Control of Hypergraphs: Leveraging THIS to Damp Noise in Diffusive Hypergraphs</a>,
 				submitted (2025).
 				<br><ps>arXiv: <a href="https://arxiv.org/abs/2511.08647" target="_blank" class="publication">2511.08647</a>
@@ -666,7 +671,7 @@
 		<div class="footer">
 			<p class="footer">
 				<br><br>
-				Last updated on November 7th, 2025.
+				Last updated on December 9th, 2025.
 				<br><br><br>
 			</p>
 		</div>
