last talks of 2025

--- a/mathphys-seminar.html
+++ b/mathphys-seminar.html
@@ -32,6 +32,16 @@
 
 		<ul>
 			<li>
+				December 5, 2025,<br>
+				<b>Olivier Mila</b> (HES-SO),<br>
+				<i><u>Hypothèse de Riemann: Pourquoi?</u></i>
+			</li>
+			<li>
+				November 26, 2025,<br>
+				<b>Philippe Jacquod</b> (University of Geneva, HES-SO),<br>
+				<i><u>Le blackout espagnol d'avril 2025</u></i>
+			</li>
+			<li>
 				November 18, 2025,<br>
 				<b>Joakim Tutt</b> (University of Geneva),<br>
 				<i><u>A Mathematical Model for the Description of the Security Framework of Copy Detection Pattern</u></i>
