add jacquod's talk

--- a/mathphys-seminar.html
+++ b/mathphys-seminar.html
@@ -34,17 +34,17 @@
 			<li>
 				December 5, 2025,<br>
 				<b>Olivier Mila</b> (HES-SO),<br>
-				<i><u>Hypothèse de Riemann: Pourquoi?</u></i>
+				<i><u>Hypothèse de Riemann: Pourquoi?</u></i>.<br>
 			</li>
 			<li>
 				November 26, 2025,<br>
 				<b>Philippe Jacquod</b> (University of Geneva, HES-SO),<br>
-				<i><u>Le blackout espagnol d'avril 2025</u></i>
+				<a href="docs/mathphys-seminar/Jacquod25.pdf" target="_blank" class="publication">Le blackout espagnol d'avril 2025</a>.<br>
 			</li>
 			<li>
 				November 18, 2025,<br>
 				<b>Joakim Tutt</b> (University of Geneva),<br>
-				<i><u>A Mathematical Model for the Description of the Security Framework of Copy Detection Pattern</u></i>
+				<i><u>A Mathematical Model for the Description of the Security Framework of Copy Detection Pattern</u></i>.<br>
 			</li>
 			<li>
 				November 13, 2025,<br>
@@ -54,12 +54,12 @@
 			<li>
 				November 4, 2025,<br>
 				<b>J&eacute;r&ouml;me Kasparian</b> (University of Geneva),<br>
-				<i><u>Future Viability of European Vineyards using Bioclimatic Climate Analogues</u></i>
+				<i><u>Future Viability of European Vineyards using Bioclimatic Climate Analogues</u></i>.<br>
 			</li>
 			<li>
 				October 22, 2025,<br>
 				<b>Roland Willa</b> (HES-SO Valais-Wallis),<br>
-				<a href="docs/mathphys-seminar/Willa25.pdf" target="_blank" class="publication">Quand la physique quantique devient macroscopique - Le Prix Nobel de physique 2025</a>
+				<a href="docs/mathphys-seminar/Willa25.pdf" target="_blank" class="publication">Quand la physique quantique devient macroscopique - Le Prix Nobel de physique 2025</a>.<br>
 			</li>
 			<li>
 				September 23, 2025,<br>
