--- a/index.html
+++ b/index.html
@@ -435,6 +435,10 @@
 
 		<ul>
 			<li>
+				<b>Jan. 23, 2026:</b> ALGO Seminar, University of Geneva.
+				<br><rd>Talk:</rd> <a href="docs/conferences/26-geneva-algo.pdf" target="_blank" class="publication">Data-based inference of power grids: challenges and opportunities</a>.
+
+			<li>
 				<b>Feb. 5 - 9, 2024:</b> Champ&eacute;ry Power Conference 2024.
 				<br><rd>Talk:</rd> <a href="docs/conferences/24-champery-cpc.pdf" target="_blank" class="publication">Locating the source of forced oscillations in transmission power grids</a>.
 
@@ -671,7 +675,7 @@
 		<div class="footer">
 			<p class="footer">
 				<br><br>
-				Last updated on December 9th, 2025.
+				Last updated on January 23rd, 2026.
 				<br><br><br>
 			</p>
 		</div>
